<resources>
    <string name="app_name">APPLICAZIONE</string>
    <string name="title_activity_2">Activity_2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="lblInizio"> Seleziona il tasto da cliccare</string>
    <string name="lblEditabile">Inserisci il tuo Nome</string>
    <string name="btnReset">Reset</string>
    <string name="btnTest"> Test</string>
    <string name="btnPlay">Play</string>
    <string name="lblfine"> Testo seconda activity</string>
</resources>